--- a/site/commerce.config.json
+++ b/site/commerce.config.json
@@ -1,9 +1,9 @@
 {
   "features": {
     "cart": true,
-    "search": true,
+    "search": false,
     "wishlist": false,
-    "customerAuth": false,
-    "customCheckout": false
+    "customerAuth": true,
+    "customCheckout": true
   }
 }
